30% code coverage achieved